--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://kakaa-nju.github.io"
+url: "https://blog.kakaa.icu"
 
 github:
   username: kakaa-nju # change to your GitHub username
