--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ url: "https://blog.kakaa.fun"
 github:
   username: kakaa-nju # change to your GitHub username
 
-twitter:
-  username: twitter_username # change to your Twitter username
+#twitter:
+#  username: twitter_username # change to your Twitter username
 
 social:
   # Change to your full name.
